[package]
name = "qx_rs_server_file"
version = "0.1.0"
edition = "2021"

authors = ["labi3285 <766043285@qq.com>"]
description = "best practice of server file api in rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/labi3285/qx_rs_server_file"
homepage = "https://github.com/labi3285/qx_rs_server_file"
keywords = ["server", "axum"]
categories = ["web-programming"]

[dependencies]

#qx_rs_server = "0.1.0"
qx_rs_server = { path = "../qx_rs_server" }

tracing = "0.1.40"
tokio = { version = "1.37.0", features = ["full"] }
once_cell = "1.19.0"
redis = { version = "0.25.4", features = ["cluster"] }

lazy_static = "1.4.0"

state = { version = "0.6.0", features = ["tls"] }





